URL validation added
